[package]
name = "rust-eth-mempool-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite"] }
ethers-providers = { version = "2", default-features = false, features = ["http", "ws", "rustls"] }
ethers-core = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
